5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1836_2602.log
== TEST (2019-06-25 10:55:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,2], [1,2,3], [4,0,2]])
a=a.T
print(dot(inv(m),a)
-- ERROR:
File "XXXX", line 7
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:55:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,2], [1,2,3], [4,0,2]])
a=a.T
print(dot(inv(m),a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:58:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
print(dot(inv(m),a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:59:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)
print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:03:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
    print("estafilococo")
elif r[0] == min(r):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:04:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(min(r))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:05:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:05:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(min(r))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:06:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
    print("estafilococo")
elif r[0] == min(r):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:08:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0]==min(r):
	print("estafilococo")
elif r[0]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:08:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(r[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:09:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(r[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:09:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
elif:
	print("coli")
-- EXECUTION TIME:
0.729894
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 16
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:09:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
elif:
	print("coli")
-- ERROR:
File "XXXX", line 16
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:09:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:10:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a= array(eval(input("insira a quantidade de alimento: ")))
m= array([[2,1,4], [1,2,0], [2,3,2]])
a=a.T 
r=dot(inv(m),a)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0]==min(r):
	print("estafilococo")
elif r[1]==min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.924312
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
